fix: adjust h2 font size for better readability on service page

--- a/client/src/pages/service/style.service.sass
+++ b/client/src/pages/service/style.service.sass
@@ -59,10 +59,11 @@
 			gap: 1.5rem
 
 			h2
-				font-size: clamp(1.5rem, 4vw, 2rem)
+				font-size: clamp(1.25rem, 4vw, 2rem)
 				font-weight: bold
 				color: var(--bold-fg)
 				align-self: center
+				text-align: center
 
 			p
 				font-size: clamp(1rem, 2vw, 1.2rem)
